chore: hook perso useCombatActions créé et OK niveau communication (pas de bugs visibles)

--- a/aventure-react/src/styles/components/_combatTurns.scss
+++ b/aventure-react/src/styles/components/_combatTurns.scss
@@ -1,14 +1,15 @@
 .combatTurns {
   position: absolute;
   background: $dark2;
-  border: 10px solid $light2;
+  border: 10px solid $dark3;
   width: 150px;
   height: 400px;
   right: 20px;
   top: 220px;
   overflow: hidden;
   text-align: center;
-  border-radius: 2000px 2000px 5000px 5000px;
+  border-radius: 50px 50px 100px 100px;
+  user-select: none;
   &__wheel {
     .player-turn, .enemy-turn, .first-turn {
       height: 50px;
