--- a/aventure-react/src/styles/main.css
+++ b/aventure-react/src/styles/main.css
@@ -1422,14 +1422,18 @@ button:active {
 .combatTurns {
   position: absolute;
   background: #4e4a59;
-  border: 10px solid #839073;
+  border: 10px solid #394053;
   width: 150px;
   height: 400px;
   right: 20px;
   top: 220px;
   overflow: hidden;
   text-align: center;
-  border-radius: 2000px 2000px 5000px 5000px;
+  border-radius: 50px 50px 100px 100px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 .combatTurns__wheel .player-turn, .combatTurns__wheel .enemy-turn, .combatTurns__wheel .first-turn {
   height: 50px;
